Fix compilation errors and add usability improvements
Co-authored-by: FizzWizZleDazzle <126825095+FizzWizZleDazzle@users.noreply.github.com>